src/styles/main.css
/* 
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     GLOBAL CSS CODES
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/

/* COLOR CODES */

:root{
  --primary: #00ACDE;           /* Blue */
  --primary-dark: #0083B1;      /* Dark Blue */

  --est-pri: #3B73B9;           /* Primary Industry (Base) */
  --est-pri-light: #7AB8DF;     /* Primary Industry (Alt) */
  --est-sec: #477F39;           /* Secondary Industry (Base) */
  --est-sec-light: #88B86E;     /* Secondary Industry (Alt) */
  --est-res: #9C213A;           /* Restaurants (Base) */
  --est-res-light: #BE6C7C;     /* Restaurants (Alt) */
}

/* DIV FORMATTING */

.div-row {
  display: table;
  width: 100%;
}

.div-column {
  display: table-cell; 
}

/* FONTS */

@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@900&family=KoHo:wght@500&family=Sigmar+One&display=swap');

* {
  font-family: 'KoHo', sans-serif;
}

/* 
   BUTTONS
   (Used in both the lobby and the game)
   This one is from cssbuttons.io 
*/

.button {
  appearance: button;
  background-color: var(--primary-dark);
  border: solid transparent;
  border-radius: 16px;
  border-width: 0 0 4px;
  box-sizing: border-box;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  font-size: 15px;
  font-weight: 700;
  letter-spacing: .8px;
  line-height: 20px;
  margin-left: 3px;
  margin-right: 3px;
  outline: none;
  overflow: visible;
  padding: 7px 15px;   /* affects button:active */
  text-align: center;
  text-transform: uppercase;
  touch-action: manipulation;
  transform: translateZ(0);
  transition: filter .2s;
  user-select: none;
  -webkit-user-select: none;
  vertical-align: middle;
  white-space: nowrap;
}

.button:after {
  background-clip: padding-box;
  background-color: var(--primary);
  border: solid transparent;
  border-radius: 16px;
  border-width: 0 0 4px;
  bottom: -4px;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: -1;
}

.button:main, .button:focus {
  user-select: auto;
}

.button:hover:not(:disabled) {
  filter: brightness(1.1);
}

.button:disabled {
  cursor: auto;
}

.button:active:after {
  border-width: 0 0 0px;
}

.button:active {
  padding-bottom: 3px;   /* change if adjust padding */
}
/* End imported button code */

/* 
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     LOBBY SPECIFIC CSS CODES
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/

/* TITLES */

.title {
  background-color: var(--primary);   
  color: white;
  font-family: "Kanit", "Sigmar One", cursive;
  font-size: 40pt;
  font-weight: bold;
  text-align: center;
}

.subtitle {
  color: black;
  display: inline-block;
  font-size: 25pt;
  font-weight: bold;
  margin: 20px 0 10px;
  padding: 0 20px;
  text-align: center;
}

/* FOOTER */

.footer {
  background-color: var(--primary);
  bottom: 0;
  color: white;
  font-size: 20px;
  height: 32px;    /* image height */
  left: 0;
  padding: 5px;
  position: fixed;
  text-align: center;
  width: 100%;
}

/* MATCHMAKING */

.mm-container{
  border-radius: 16px;
  border: solid var(--primary-dark);
  max-width: 800px;
  margin: 2px auto;
  text-align: center;
}

.mm-div-row {
  display: table;
  font-size: 18px;
  text-align: center;
  width: 100%;
}

.mm-div-cell {
  background-color: var(--primary);
  border-radius: 16px;
  border: solid white;
  color: white;
  display: table-cell;
  padding: 1px 10px;
}

.mm-table {
  font-size: 20px;
  table-layout: fixed;
  width: 100%;
}

.mm-td {
  background-color: white;
  border-radius: 16px;
  border: solid var(--primary) 2px;
  color: black;
  overflow-wrap: break-word;
  padding: 5px 10px;
  width: 20%;
}

.mm-td-active {
  border: solid red 4px;
}

/* PLAYER NAME ENTRY */

.padded_div {
  font-size: 20px;
  padding: 3px;
  text-align: center;
}

/* CREATE ROOM */

.input-box{
  border-radius: 10px;
  border: 2px solid #00acdd;
  box-sizing: border-box;
  font-size: 20px;
  margin: 8px 0;
}

select {
  font-size: 20px;
  margin: 2px;
  padding: 6px;
}

/* LOBBY */

.col_matchid {
  min-width: 12ch;
  text-align: center;
}

.col_seats {
  min-width: 5ch;
  text-align: center;
}

.col_setup {
  min-width: 12ch;
  text-align: center;
}

.errorMessage {
  color: red;
  padding: 3px;
  text-align: center;
}

.lobby-container{
  border-radius: 16px;
  border: solid var(--primary);
  margin: 2px auto;
  max-width: 600px;
}

.lobby-div-col {
  display: table-cell;
  max-width: 150px;
  padding: 1px 10px;
  vertical-align: middle;
}

.lobby-div-col-width {
  width: 25vw;
}

.lobby-div-row {
  background-color: var(--primary);
  border-radius: 16px;
  color: white;
  display: table;
  font-size: 18px;
  margin: 5px;
  padding: 1px 5px;
  text-align: center;
  width: 100%;
}

/* 
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     GAME SPECIFIC CSS CODES
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/

/* ACTIONS & ITEM SELECTION */

.active {
  background-color: red;
  cursor: pointer;
}

.inactive {
  filter: grayscale(1);
}

.button_active:after {
  background-color: red;
}

.button_hide {
  display: none;
}

/* STATUS BAR */
.status-bar{
  background-color: var(--primary);
  color: white;
  font-size: 18px;
  margin: 5px;
  padding: 2px;
  text-align: center;
}

.status-bar-active{
  background-color: var(--est-res-light);
  /*animation: change-color 5s ease-in-out infinite alternate;*/
}

/*@keyframes change-color {
  from {background-color: var(--primary);}
  to {background-color: var(--primary-dark);}
}*/

/* ESTABLISHMENTS */

.est_td {
  padding: 3px;
  position: relative;
}

.est_img {
  display: block;
  height: 200px;
  width: 125px;
}

.est_num {
  color: white;
  font-size: 14px;
  left: 5px;
  position: absolute;
  top: 5px;
}

/* LOGS */

.log_box {
  border: double;
  font-size: 12px;
  height: 700px;
  overflow: auto;
  width: 250px;
}

.log_div {
  align-items: center;
  display: flex;
  max-height: 15px;
  white-space: pre;
}

/* PLAYER INFO */

.coin_td {
  position: relative;
}

.coin_img {
  width: 25px;
}

.coin_num {
  color: white;
  font-size: 14px;
  position: absolute;
  text-align: center;
  top: 5px;
  width: 25px;
}

.land_td {
  padding: 3px;
}

.name_div {
  padding: 3px;
}

.name_text {
  background: white;
  font-size: 12pt;
  overflow: hidden;
  width: 80px;
}

.land_img_self {
  display: block;
  height: 112px;
  width: 70px;
}

.land_img {
  display: block;
  height: 56px;
  width: 35px;
}

.estmini_div_self {
  margin: 0 auto;
  padding-left: 5px;
  padding-right: 5px;
  width: 100px;
}

.estmini_div {
  margin: 0 auto;
  padding-left: 5px;
  padding-right: 5px;
  width: 80px;
}

.estmini_img_self {
  display: block;
  width: 100%;
}

.estmini_img {
  display: block;
  width: 100%;
}

